minitrace-macro/tests/trace/ui/err/006-has-too-many-arguments.rs
use minitrace::trace;

#[trace(a=true, b=true, c=true, d=true)]
fn f() {}

fn main() {}
